tests/netperf/isilon_40G/udp_100/outgoing.txt
zephram-1# netserver -D
Starting netserver with host 'IN(6)ADDR_ANY' port '12865' and family AF_UNSPEC
^C
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-1# bash cpu_usage.sh netserver
^C
10.1 11.9 12.6 14.2 14.6 16.5 16.7 18.4 18.7 20.7 20.7 22.6 21.9 23.9 24.0 25.9 25.3 27.3 26.4 28.4 30.3 29.6 32.0 30.8 32.5 31.2 33.1 32.1 34.2 32.8 34.6 33.0 34.5 33.1 34.8 33.3 35.3 34.0 36.0 34.6 36.7 35.1 36.8 34.3 36.6 38.5 36.4 38.9 37.0 39.2 37.5 39.2 37.4
average: 29.1736
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# ./ipfwd 1 1.0
[ipfwd] starting
current:  10.028%, error:  10.0%, probability:  1.000%
current:  11.224%, error:  1.2%, probability:  1.000%
current:  11.322%, error:  0.1%, probability:  1.000%
current:  12.415%, error:  1.1%, probability:  1.000%
current:  16.425%, error:  4.0%, probability:  1.000%
current:  17.108%, error:  0.7%, probability:  1.000%
current:  17.737%, error:  0.6%, probability:  1.000%
current:  16.315%, error:  1.4%, probability:  1.000%
^C
zephram-2# ipfw show | wc
      52     470    3265
zephram-2# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# netperf -l 30 -H 192.168.166.32 -t UDP_STREAM
MIGRATED UDP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to 192.168.166.32 (192.168.166.32) port 0 AF_INET
Socket  Message  Elapsed      Messages                
Size    Size     Time         Okay Errors   Throughput
bytes   bytes    secs            #      #   10^6bits/sec

 16384   16384   30.00     2252195      0    9839.38
512000           30.00     2252030           9838.65

zephram-2# 










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# bash cpu_usage.sh netperf

^C
13.8 18.6 21.5 26.5 29.0 34.3 35.6 40.7 41.6 46.5 47.1 52.2 52.3 57.1 56.8 61.8 61.1 66.1 64.9 70.0 68.8 73.7 72.2 77.1 74.8 80.1 77.6 82.5 79.9 84.9 82.1 87.1 84.0 89.2 86.1 91.0 87.8 92.7 89.1 94.1 90.4 95.4 91.6 96.7 92.7 97.6 93.7 98.9 95.0 99.9 95.9 100.0 96.3 100.0 97.0 100.0
average: 73.0964
zephram-2# 
